--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "iodine_storage"
-version = "0.1.0"
+version = "0.0.7"
 authors = ["okrplay <32576280+okrplay@users.noreply.github.com>"]
 edition = "2018"
 license= "ISC"
 
 [dependencies]
+diesel = { version = "1.4", features = ["postgres"]}
 dotenv = "0.13"
 frank_jwt = "3.1"
 tower-web = "0.3"
