--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ license= "ISC"
 diesel = { version = "1.4", features = ["postgres"]}
 dotenv = "0.13"
 frank_jwt = "3.1"
+http = "0.1"
+serde = "1.0"
 serde_json = "1.0"
 tower-web = "0.3"
