Fix Travis CI Windows OpenSSL build error #5
Signed-off-by: okrplay <32576280+okrplay@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ os:
     - osx
     - windows
 dist: xenial
-before_script:
-    - sh install_openssl_win.sh
+before_install:
+    - bash ./install_openssl_win.sh
