Travis CI Windows build should finally work now, OPENSSL_DIR is set on Windows
Signed-off-by: okrplay <32576280+okrplay@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: rust
-os:
-    - linux
-    - osx
-    - windows
-dist: xenial
+matrix:
+    include:
+        - os: linux
+          dist: xenial
+        - os: osx
+        - os: windows
+          env: OPENSSL_DIR=C:\Users\travis\openssl_lib
 before_install:
     - bash ./install_openssl_win.sh
