--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ matrix:
           dist: xenial
         - os: osx
         - os: windows
-          env: OPENSSL_DIR=C:\Users\travis\openssl_lib
+          env: OPENSSL_DIR=C:/Users/travis/openssl_lib
 before_install:
     - bash ./install_openssl_win.sh
