--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ matrix:
               - OPENSSL_STATIC=true
 before_install:
     - bash ./install_openssl_win.sh
+    - powershell: Win64OpenSSL-1_1_1a.exe /SILENT /VERYSILENT /SP- /DIR="C:\Users\travis\openssl_dev"
