--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "iodine_storage"
-version = "0.0.28"
+version = "0.0.29"
 authors = ["okrplay <32576280+okrplay@users.noreply.github.com>"]
 edition = "2018"
 license= "ISC"
@@ -10,7 +10,8 @@ bcrypt = "0.3"
 dotenv = "0.13"
 frank_jwt = "3.1"
 http = "0.1"
-s4 = "0.0"
+rusoto_core = "0.36"
+rusoto_s3 = "0.36"
 serde = "1.0"
 serde_json = "1.0"
 sofa = { git = "https://github.com/danieleades/sofa.git", rev = "11922d9e4acf94f63d762a57f631aa2888446d0f" }
